--- a/index.html
+++ b/index.html
@@ -8,7 +8,24 @@
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
-    <header>
+    <header class="work-sans bg-p">
+        <nav class="navbar flex-row">
+            <h3 class="brand">G3 Architect</h3>
+            <ul class="nav-links flex-row">
+                <li class="nav-item"><a href="" class="nav-link dark2">Home</a></li>
+                <li class="nav-item"><a href="" class="nav-link dark2">About</a></li>
+                <li class="nav-item"><a href="" class="nav-link dark2">Contact Us</a></li>
+                <li class="nav-item"><a href="" class="nav-link dark2">Login</a></li>
+            </ul>
+        </nav>
+        <div class="banner">
+            <div class="banner-content">
+                <h1 class="banner-title">Brand New Group of Architects</h1>
+                <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn-primary">Explore More</button>
+            </div>
+            <img class="banner-image" src="images/banner.png" alt="banner">
+        </div>
 
     </header>
     <main>
