--- a/index.html
+++ b/index.html
@@ -29,6 +29,29 @@
 
     </header>
     <main>
+        <!----our team and features-->
+        <section class="team  flex-row">
+            <div class="team-img-container">
+                <img src="images/team1.png" alt="Two architect talking about architect design">
+                <img src="images/team2.png" alt="">
+                <img src="images/team3.png" alt="">
+                <img src="images/team4.png" alt="">
+            </div>
+            <div class="our-features">
+                <h3 class="section-title"><span id="quick">Quick list</span> <span id="of">of Our</span> <br><span id="Features">Features</span></h3>
+                <p class="feature-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn-primary">Explore More</button>
+
+            </div>
+        </section>
+        <!----features-love-->
+        <section class="features-love">
+        
+        </section>
+        <!----facts-->
+        <section class="facts">
+
+        </section>
 
     </main>
     <footer></footer>
