fact section desktop aprroach version added

--- a/index.html
+++ b/index.html
@@ -50,7 +50,38 @@
         </section>
         <!----facts-->
         <section class="facts">
-
+            <h3 class="section-title" id="facts-title">Some Facts</h3>
+            <p class="facts-description dark2">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            <div class="fact-container">
+                <div class="fact-card">
+                    <div>
+                        <img src="images/icons/ribon.png" alt="" class="fact-icon">
+                        <h4 class="fact-number dark2">54</h4>
+                        <h5 class="fact-name dark2">Awards Winnings</h5>
+                    </div>
+                </div>
+                <div class="fact-card">
+                    <div>
+                        <img src="images/icons/projects.png" alt="" class="fact-icon">
+                        <h4 class="fact-number dark2">1458</h4>
+                        <h5 class="fact-name dark2">Project Finished</h5>
+                    </div>
+                </div>
+                <div class="fact-card">
+                    <div>
+                        <img src="images/icons/customers.png" alt="" class="fact-icon">
+                        <h4 class="fact-number dark2">590</h4>
+                        <h5 class="fact-name dark2">Clients Worked</h5>
+                    </div>
+                </div>
+                <div class="fact-card">
+                    <div>
+                        <img src="images/icons/email.png" alt="" class="fact-icon">
+                        <h4 class="fact-number dark2">22578</h4>
+                        <h5 class="fact-name dark2">Email Send</h5>
+                    </div>
+                </div>
+            </div>
         </section>
 
     </main>
