--- a/index.html
+++ b/index.html
@@ -83,6 +83,20 @@
                 </div>
             </div>
         </section>
+        <section class="sponsor">
+                <div class="heading">
+                <h3 class="sponsor-title dark1">Our Sponspors</h3>
+                <p class="sponsor-secription dark2">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+                </div>
+                <div class="sponsors">
+                    <img src="images/sponsors/amazon.png" alt="">
+                    <img src="images/sponsors/figma.png" alt="">
+                    <img src="images/sponsors/google.png" alt="">
+                    <img src="images/sponsors/spotify.png" alt="">
+                    <img src="images/sponsors/telerama.png" alt="">
+                </div>
+           
+        </section>
 
     </main>
     <footer></footer>
